tests/test_files/invalid/syntax/rule_parameters_trailing_comma.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Rule before(event1,)
    (event1.time + offset < event2.time) And (event1.value == 5)
End
